cleanup; naming; added nested map style prefix logging method.