@@ -18,7 +18,7 @@
 		<compiler-plugin.version>3.8.1</compiler-plugin.version>
 		<maven.versions.plugin.version>2.8.1</maven.versions.plugin.version>
 		<lombok.version>1.18.22</lombok.version>
-		<native.maven.plugin.version>0.9.8</native.maven.plugin.version>
+		<native.maven.plugin.version>0.9.9</native.maven.plugin.version>
 		<picocli.version>4.6.2</picocli.version>
 		<jgrapht.version>1.5.1</jgrapht.version>
 		<jgraphx.version>4.2.2</jgraphx.version>
@@ -29,9 +29,7 @@
 		<validator.api.version>2.0.1.Final</validator.api.version>
 		<io.dropwizard.metrics.core.version>3.1.2</io.dropwizard.metrics.core.version>
 
-		<lwjgl.version>3.3.0</lwjgl.version>
-		<joml.version>1.10.3</joml.version>
-		<lwjgl.natives>natives-linux</lwjgl.natives>
+		<org.openjdk.jol.core.verion>0.16</org.openjdk.jol.core.verion>
 
 	</properties>
 
@@ -45,9 +43,16 @@
 
 		<dependency>
 			<groupId>info.picocli</groupId>
+			<artifactId>picocli-codegen</artifactId>
+			<version>${picocli.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>info.picocli</groupId>
 			<artifactId>picocli</artifactId>
 			<version>${picocli.version}</version>
 		</dependency>
+
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-collections4</artifactId>
@@ -100,6 +105,13 @@
 			<artifactId>metrics-core</artifactId>
 			<version>${io.dropwizard.metrics.core.version}</version>
 		</dependency>
+
+				<dependency>
+			<groupId>org.openjdk.jol</groupId>
+			<artifactId>jol-core</artifactId>
+			<version>${org.openjdk.jol.core.verion}</version>
+		</dependency>
+
 	</dependencies>
 
 	<dependencyManagement>
@@ -129,11 +141,16 @@
 				<version>${compiler-plugin.version}</version>
 				<configuration>
 					<release>${java.version}</release>
+					<compilerArgs>--enable-preview</compilerArgs>
+					<jvmArguments>--enable-preview</jvmArguments>
 				</configuration>
 			</plugin>
 			<plugin>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>${maven.surefire.version}</version>
+			      <configuration>
+        <argLine>--enable-preview</argLine>
+      </configuration>
 				<dependencies>
 					<dependency>
 						<groupId>org.junit.platform</groupId>
@@ -174,6 +191,8 @@
 						</executions>
 						<configuration>
 							<mainClass>com.starcases.prime.PrimeToolKit</mainClass>
+							<compilerArgs>-J--enable-preview -J--allow-incomplete-classpath</compilerArgs>
+							<jvmArguments>-J--enable-preview -J--allow-incomplete-classpath</jvmArguments>
 						</configuration>
 					</plugin>
 				</plugins>
@@ -187,7 +206,7 @@
 			<name>GraalVM native-build-tools Snapshots</name>
 			<url>https://raw.githubusercontent.com/graalvm/native-build-tools/snapshots</url>
 			<releases>
-				<enabled>false</enabled>
+				<enabled>true</enabled>
 			</releases>
 			<snapshots>
 				<enabled>true</enabled>
